# The-Fidget-Reactor

./: .gitignore  CMakeLists.txt  FidgetReactor.sln  Makefile  README.md  build.ps1  bus_client.hpp  bus_router.cpp  check_dependencies.ps1  checkpoint.md  config_helper.cpp  config_helper.hpp  controller_manager.cpp  controller_manager.hpp  controller_runner.cpp  cool_system.hpp  core_system.hpp  ctrl_system.hpp  debug_console.cpp  debug_ui.vcxproj  gen_system.hpp  init_manager.cpp  init_manager.hpp  main_window.cpp  message_bus.hpp  packages.config  peripheral_controller.hpp  phc.cpp  pin_sim.cpp  pin_sim.hpp  pipe_bus_client.cpp  pipe_bus_client.hpp  power_state_machine.hpp  reactor.proto  shutdown_manager.hpp  simulator_config.cpp  simulator_config.hpp  startup_manager.hpp  subsystem.hpp  test_manager.hpp  (+1 more)
bus/: message_bus.hpp  message_types.hpp  pin_sim.cpp  pin_sim.hpp  pipe_bus_client.cpp
client/: .gitignore
config/: config_helper.cpp  config_helper.hpp  simulation_config.json  simulator_config.hpp  wiring.json
docs/: next_steps.md  system_orchistration.md
interfaces/: base_controller.cpp  base_controller.hpp
main_controller/: controller_core.hpp  init_manager.cpp  main_controller.cpp  shutdown_manager.hpp  startup_manager.hpp  state_machine.hpp  test_manager.hpp  tick_engine.hpp
main_controller/subsystems/: cool_system.hpp  core_system.hpp  ctrl_system.hpp  gen_system.hpp  subsystem.hpp  xfer_system.hpp
peripheral_controllers/: phc.cpp
process_managers/: init_manager.hpp  shutdown_manager.hpp
proto/: reactor.proto
simulation/: Makefile  controller_core.hpp  controller_manager.cpp  controller_manager.hpp  controller_runner.cpp  debug_console.hpp  main_window.cpp  peripheral_controller.cpp  peripheral_controller.hpp  pin_sim.cpp  pin_sim.hpp  power_button.cpp  power_button.hpp  power_state_machine.hpp  tick_engine.hpp
simulation/config/: bus.json  main_controller.json  simulator_config.cpp  simulator_config.hpp
simulation/config/components/: phc_a.json
simulation/interfaces/: configurable_component.hpp
simulation/process_managers/: init_manager.cpp  startup_manager.hpp  test_manager.hpp
simulation/subsystems/: core_system.hpp  ctrl_system.hpp  gen_system.hpp  subsystem.hpp  xfer_system.hpp
subsystems/: cool_system.hpp
temp/: .gitignore
ui/: debug_console.cpp  debug_console.hpp  main_window.cpp  power_button.cpp
